# PyReadableDiff

./: .travis.yml  README.md  pytest.ini  setup.cfg  setup.py  test-requirements.txt
pydiff/: __init__.py  base.py  character.py  convert.py  line.py  list.py  word.py
pydiff/tests/: test_character.py  test_convert.py  test_line.py  test_list.py  test_word.py  tests.py  utils.py
