[metadata]
name = pydiff
summary = PyReadableDiff: Intuitive human-readable diff for text
description-file = README.md
author = Gevorg Davoian, Iulius Curt, Kevin Decker (the author of the original jsdiff library) and others
author-email = davoian.serf at gmail.com
home-page = https://github.com/BeagleInc/PyReadableDiff
license = Apache-2.0

[files]
packages = pydiff

[tool:pytest]
pep8ignore = tests/*.py ALL
